# trad

./: .gitignore  CHANGELOG.md  README.md  VERSION  quant-trading-v0.1.0.bundle  quant_trading.db  requirements.txt
backend/: .dockerignore  .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  exceptions.py  logger.py  logging.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  backtest_nav.py  backtest_run.py  base.py  factor.py  job_run.py  order.py  portfolio.py  position.py  price.py  risk_log.py  signal.py  stock.py
backend/app/scheduler/: __init__.py  runner.py
backend/app/schemas/: backtest.py  dashboard.py  data.py  health.py  order.py  position.py  risk.py  signal.py  simulation.py  strategy.py
backend/app/services/: trading_service.py
backend/app/services/backtest/: engine.py
backend/app/services/brokers/: base.py
backend/app/services/data/: cleaner.py  ingestion.py  repository.py
backend/app/services/risk/: __init__.py  engine.py
backend/app/services/simulation/: engine.py
backend/app/services/strategy/: factor_engine.py  fundamental_provider.py  strategy_engine.py
backend/app/tasks/: backtest_jobs.py  data_jobs.py  paper_trading_jobs.py  strategy_jobs.py
backend/tests/: conftest.py  test_api_endpoints.py  test_api_filters.py  test_backtest_endpoints.py  test_data_cleaner.py  test_data_endpoint.py  test_data_ingestion.py  test_health.py  test_risk_controls.py  test_simulation_endpoints.py  test_strategy_endpoints.py
(+62 files in other folders)
