[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-backend"
version = "0.1.0"
description = "Personal quant trading platform backend service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0",
  "loguru>=0.7.2",
  "python-dotenv>=1.0.1",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "akshare>=1.14.0",
  "tushare>=1.4.15",
  "apscheduler>=3.10.4",
  "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"